# launchpad

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
client/: LICENSE  README.md  package.json
client/src/: index.ts
client/test/: launchpad.test.ts
client/test/fixtures/: contents.ts  nearAccount.ts
client/test/mocks/: server.ts
contracts/: README.md  package.json
contracts/series/: Cargo.toml  README.md  build.sh  deploy.sh
contracts/series/src/: approval.rs  enumeration.rs  internal.rs  lib.rs  metadata.rs  nft_core.rs  royalty.rs  series.rs  treasury_ext.rs
contracts/treasury/: .env.example  Cargo.toml  README.md  add_content.sh  build.sh  contract_init.sh  deploy.sh
contracts/treasury/src/: accounts.rs  analytics.rs  collections.rs  content.rs  lib.rs  royalties.rs  security.rs  types.rs  utils.rs
contracts/treasury/tests/: integration.rs
core/: README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
core/src/: index.ts
core/src/types/: getSigner.types.ts  provider.type.ts  signer.type.ts
core/test/: contracts.test.ts  signers.test.ts
example/: .env.template  package.json
example/src/components/: Content.tsx  (+8 more)
server/: .env.template  Dockerfile  README.md  nitro.config.ts  package.json
ui/: README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.setup.ts
ui/src/: index.css  index.ts  theme.ts
ui/test/: Launch.test.tsx  Player.test.tsx  Royalty.test.tsx
(+62 files in other folders)
