[package]
name = "series"
version = "1.0.0"
authors = ["Manuel Rivera <manuel@ampleplatform.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
serde_json = "1.0"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[patch.crates-io]
parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1.git" }
