[package]
name = "treasury"
version = "1.0.0"
authors = ["Manuel Rivera <manuel@ampleplatform.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.1.1"
uint = { version = "0.9.3", default-features = false }

[dev-dependencies]
near-workspaces = "0.10.0"
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0.114"
color-eyre = "0.6.2"
near-gas = "0.2.5"
# anyhow = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
strip = true

[patch.crates-io]
parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1.git" }
